clientFolder/force-app/main/default/objects/Shop_Case__c/Shop_Case__c.object-meta.xml
<CustomObject>
    <label>Shop Case</label>
    <nameField>
        <label>Custom Shop Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>