clientFolder/force-app/main/default/objects/Shop_Case__c/fields/Button_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Button_Clicked__c</fullName>
    <label>Button Clicked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Button</fullName>
            </value>
            <value>
                <fullName>Complete Button</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>