clientFolder/force-app/main/default/objects/Shop_Case__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Oil Change</fullName>
            </value>
            <value>
                <fullName>Tire Rotation</fullName>
            </value>
            <value>
                <fullName>Engine Light On</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>