clientFolder/force-app/main/default/objects/Shop_Case__c/fields/Service_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Notes__c</fullName>
    <label>Service Type Notes</label>
    <type>TextArea</type>
</CustomField>