clientFolder/force-app/main/default/objects/Shop_Case__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model 3</fullName>
            </value>
            <value>
                <fullName>Model S</fullName>
            </value>
            <value>
                <fullName>Model X</fullName>
            </value>
            <value>
                <fullName>Model Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>