clientFolder/force-app/main/default/objects/Shop_Case__c/listViews/High_Priority_Maintenance_Q_Custom_Shop_Case.listView-meta.xml
<ListView>
    <fullName>High_Priority_Maintenance_Q_Custom_Shop_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>High Priority Maintenance Q</label>
    <queue>High_Priority_Maintenance_Q</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>