clientFolder/force-app/main/default/objects/Shop_Case__c/listViews/In_Service.listView-meta.xml
<ListView>
    <fullName>In_Service</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Service</value>
    </filters>
    <label>In Service</label>
</ListView>