clientFolder/force-app/main/default/objects/Shop_Case__c/listViews/Standard_Maintenance_Q_Shop_Case.listView-meta.xml
<ListView>
    <fullName>Standard_Maintenance_Q_Shop_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Standard Maintenance Q</label>
    <queue>Standard_Maintenance_Q</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>